# Postchair

./: .gitignore  Package.swift  README.md  main.py  postchair_ble.py  postchair_server.py  pyproject.toml
app/: __init__.py  runtime_service.py  train_random_forest.py
data/: model-selection.json  runtime-settings.json  sensor-data-20260319170734-hikaruhouse.json  sensor-data-chamo.json  sensor-data-hikaru.json  sensor-data-maki.json  sensor-data-new.json  sensor-data-uta.json
esp32/src/: main.cpp
models/: hikaruhouse.joblib  random_forest_label.joblib  random_forest_label_20260319.joblib
postchair.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_live_classification.py  test_parser.py  test_runtime_service.py  test_train_random_forest.py
ui/Postchair/: AppState.swift  BackendClient.swift  BackendProcessManager.swift  DashboardWindowView.swift  Models.swift  PostchairApp.swift  UIComponents.swift  VisualEffectView.swift
ui/Postchair.xcodeproj/: project.pbxproj
ui/Postchair.xcodeproj/project.xcworkspace/xcuserdata/hikaru.xcuserdatad/: UserInterfaceState.xcuserstate
ui/Postchair.xcodeproj/xcshareddata/xcschemes/: Postchair.xcscheme
ui/Postchair.xcodeproj/xcuserdata/hikaru.xcuserdatad/xcschemes/: xcschememanagement.plist
ui/Tests/PostchairCoreTests/: NotificationRegressionTests.swift
