[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "postchair"
version = "0.1.0"
description = "BLE client for receiving FSR data from the Postchair ESP32 device."
requires-python = ">=3.12"
dependencies = [
    "bleak>=2.1.1",
    "joblib>=1.4.2",
    "scikit-learn>=1.7.1",
]

[project.scripts]
postchair-ble = "postchair_ble:main"
postchair-train = "app.train_random_forest:main"
postchair-server = "postchair_server:main"

[tool.setuptools]
py-modules = ["main", "postchair_ble", "postchair_server"]

[tool.setuptools.packages.find]
include = ["app*"]
